# NineS

./: .gitattributes  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: agent-skill-setup.md  agent-skill-setup.zh.md  api-reference.md  api-reference.zh.md  changelog.md  changelog.zh.md  design-philosophy.md  design-philosophy.zh.md  evaluation-criteria.md  evaluation-criteria.zh.md  index.md  index.zh.md  installation.md  installation.zh.md  quick-start.md  quick-start.zh.md
references/: agent-impact-analysis.md  analysis-pipeline.md  cross-artifact-audit.md  derived-metrics.md  evaluation-framework.md  index.md  iteration-protocol.md  key-point-extraction.md  project-identity.md  resilience-budgets.md
samples/: README.md
scripts/: install.sh
tests/: conftest.py  test_agent_impact.py  test_analyzer.py  test_benchmark_cmd.py  test_benchmark_gen.py  test_breakdown_reporter.py  test_c01_full_migration.py  test_capability_evaluators.py  test_cli.py  test_collection_evaluators.py  test_collector.py  test_config.py  test_core_errors.py  test_core_events.py  test_core_models.py  test_core_protocols.py  test_docs_infrastructure.py  test_eval_evaluators.py  test_eval_reporters.py  test_eval_runner.py  test_evaluation_context.py  test_gates.py  test_graph_decomposer.py  test_graph_evaluators.py  test_graph_models.py  test_graph_verifier.py  test_import_graph.py  test_indexer.py  test_iterate_cmd.py  test_iteration.py  test_keypoint.py  test_legacy_evaluator_adapter.py  test_live_evaluators.py  test_mapping.py  test_mechanism_rules.py  test_multi_round.py  (+14 more)
(+223 files in other folders)
